Closed Bug 1038221 Opened 11 years ago Closed 11 years ago

Fix some WMF destructors to be private

Categories

(Core :: General, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file, 1 obsolete file)

No description provided.
Assignee: nobody → ehsan
Blocks: winclang
Attachment #8455399 - Flags: review?(bjacob)
Attachment #8455399 - Attachment is obsolete: true
Attachment #8455399 - Flags: review?(bjacob)
Attachment #8455626 - Flags: review?(cpearce)
Comment on attachment 8455626 [details] [diff] [review] Fix some WMF destructors to be private Review of attachment 8455626 [details] [diff] [review]: ----------------------------------------------------------------- ::: content/media/wmf/WMFByteStream.cpp @@ +395,5 @@ > STDMETHODIMP > WMFByteStream::Read(BYTE* aBuffer, ULONG aBufferLength, ULONG* aOutBytesRead) > { > ReentrantMonitorAutoEnter mon(mReentrantMonitor); > + RefPtr<ReadRequest> request = new ReadRequest(mOffset, aBuffer, aBufferLength); The mob has spoken. Use nsRefPtr going forward.
Attachment #8455626 - Flags: review?(cpearce) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: