Bug 1038221 - Fix some WMF destructors to be private; r=cpearce